[gd_scene load_steps=6 format=3 uid="uid://cewh81xw3mkog"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_igbit"]
[ext_resource type="Texture2D" uid="uid://cebvyrjdqlj5x" path="res://resources/Black.png" id="2_xksbv"]
[ext_resource type="Texture2D" uid="uid://dxclt2g75yrig" path="res://resources/White.png" id="3_6mpjl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxteq"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3k1ld"]
size = Vector2(120, 120)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_igbit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xxteq")

[node name="Player" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.35, 0.35)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Sprite2D" type="Sprite2D" parent="Player"]
z_index = 5
texture = ExtResource("2_xksbv")

[node name="Sprite2D2" type="Sprite2D" parent="Player"]
texture_filter = 3
scale = Vector2(1.1, 1.1)
texture = ExtResource("3_6mpjl")

[node name="Checker1" type="RayCast2D" parent="."]
target_position = Vector2(65, -65)

[node name="Checker2" type="RayCast2D" parent="."]
target_position = Vector2(65, 65)

[node name="Checker3" type="RayCast2D" parent="."]
target_position = Vector2(-65, 65)

[node name="Checker4" type="RayCast2D" parent="."]
target_position = Vector2(-65, -65)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3k1ld")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_3k1ld")
